--- a/src/app/pages/macroCiclo/macroCiclo.component.html
+++ b/src/app/pages/macroCiclo/macroCiclo.component.html
@@ -302,7 +302,7 @@
                
                <dxi-column dataField="cliente" caption="Cliente"></dxi-column>
                <dxi-column dataField="flete" caption="Flete" ></dxi-column>
-               <dxi-column dataField="ingrXKm" caption="Ingreso por Kilómetros"></dxi-column>
+               <dxi-column dataField="ingrXKm" caption="Ingreso Kilómetros"></dxi-column>
                <dxi-column dataField="kms" caption="Kms" ></dxi-column>
                <dxi-column dataField="viajes" caption="Viajes" ></dxi-column>
               
@@ -334,7 +334,7 @@
               <dxi-column dataField="cliente" caption="Cliente" [fixed]="true" [width]="100"></dxi-column>
               <dxi-column dataField="estado" caption="Estado" [fixed]="true" [width]="100"></dxi-column>
               <dxi-column dataField="flete" caption="Flete" [fixed]="true" [width]="100"></dxi-column>
-              <dxi-column dataField="ingrXKm" caption="Ingreso por Kilómetro" [fixed]="true" [width]="150"></dxi-column>
+              <dxi-column dataField="ingrXKm" caption="Ingreso Kilómetro" [fixed]="true" [width]="150"></dxi-column>
               <dxi-column dataField="kms" caption="Kms" [fixed]="true" [width]="100"></dxi-column>
               <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" [width]="150"></dxi-column>
               <dxi-column dataField="viajes" caption="Viajes" [fixed]="true" [width]="100"></dxi-column>
